--- a/新足球日志.html
+++ b/新足球日志.html
@@ -8,5 +8,9 @@
 
 <a style="color:#DC143C; font-size:50px;" href="scheme://galasports/newSoccer?log_switch=true">点击打开新足球游戏日志</a>
 
+<a href="scheme://galasports/totalfootball?log_switch=true">点击打开游戏日志双11</a>
+
+<a href="com.galasports.championsfc.official.jp://paypalpay?orderId=12022204201412081670&status=0&token=4HH34924E7386502E">打开paypal</a>
+
 </body>
 </html>
