--- a/打开日志.html
+++ b/打开日志.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<a style="color:#DC143C; font-size:50px;" href="platformsdk:://1?log_switch=true\&callUnity=open_unity_log_switch">点击打开游戏日志</a>
+<a style="color:#DC143C; font-size:50px;" href="platformsdk:://1?log_switch=true&callUnity=open_unity_log_switch">点击打开游戏日志</a>
 
 </body>
 </html>
