--- a/打开日志.html
+++ b/打开日志.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<meta charset="utf-8"> 
-<title>打开游戏日志</title> 
+<head>
+    <meta charset="utf-8">
+    <title>打开游戏日志</title>
+    <style>
+        /* 设置页面的基本样式 */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        /* 居中容器 */
+        .container {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        /* 美化链接 */
+        a {
+            display: inline-block;
+            padding: 10px 20px;
+            color: #fff;
+            background-color: #007bff;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 16px;
+            transition: background-color 0.3s;
+        }
+
+        /* 链接的悬停效果 */
+        a:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-
-<a style="color:#DC143C; font-size:50px;" href="platformsdk://1?log_switch=true&callUnity=open_unity_log_switch">点击打开游戏日志</a>
-
+    <div class="container">
+        <a href="platformsdk://1?log_switch=true&callUnity=open_unity_log_switch">点击打开游戏日志</a>
+    </div>
 </body>
 </html>
