--- a/打开日志.html
+++ b/打开日志.html
@@ -73,7 +73,7 @@
     <div class="container">
         <a href="platformsdk://1?log_switch=true&callUnity=open_unity_log_switch">点击打开游戏日志</a>
         <input type="text" id="userInput" placeholder="输入内容">
-        <button onclick="openGameLogWithInput()">提交并打开游戏日志</button>
+        <button onclick="openGameLogWithInput()">使用指定 scheme 打开</button>
     </div>
 
     <script>
