--- a/计算中信卡消费静态网页.html
+++ b/计算中信卡消费静态网页.html
@@ -191,6 +191,18 @@
                     return;
                 }
                 
+                if (description.includes("中信碳账户")) {
+                    return;
+                }
+
+                if (description.includes("积分兑券")) {
+                    return;
+                }
+
+                if (description.includes("支付立返金")) {
+                    return;
+                }
+                
                 if (description.includes("还款")) {
                     count3++;
                     return;
