--- a/mysend.html
+++ b/mysend.html
@@ -312,7 +312,7 @@
         // State
         const DEFAULT_IDS = [
             { id: 'zbh', name: '隔壁老赵' },
-            { id: '111', name: '隔壁老杨' }
+            { id: '36abd835', name: '隔壁老杨' }
         ];
         
         const STORAGE_KEYS = {
